generate pdfs command
